Added Forums and Topics controllers and views. When appropriate, models now nullify or destroy their dependents when they are themselves destroyed. Added variables for the forumby CSS properties instead of hard-coding it. Refactorings.

--- a/app/views/forumby/home.html.haml
+++ b/app/views/forumby/home.html.haml
@@ -1,4 +1,4 @@
 %section#forumby-home
   %h1= t 'forumby.home.heading'
-  = render :partial => 'categories/category', :collection => categories
-  = render :partial => 'forums/forum', :collection => top_level_forums
+  = list_for :categories, categories, :category
+  = list_for :forums, top_level_forums
