--- a/app/stylesheets/forumby.sass
+++ b/app/stylesheets/forumby.sass
@@ -1,20 +1,80 @@
+@import blueprint/colors
+
+@import partials/inline-block
 @import partials/block
 @import partials/round-block
 
 $forumby-margin: 16px
 $forumby-padding: 16px
+$forumby-text-color: $font-color
+$forumby-background-color: #fff
+$forumby-header-margin: 0px
+$forumby-header-color: $header-color
 
 $category-margin: 8px
 $category-padding: 8px
+$category-text-color: $font-color
 $category-background-color: #edeceb
+$category-header-margin: 0px
+$category-header-color: $header-color
 
-$category-forums-padding: 4px
+$category-forums-margin: 8px
+$category-forums-padding: 8px
+$category-forums-text-color: $font-color
+$category-forums-background-color: $category-background-color - #111
+
+$category-forum-margin: 4px
+$category-forum-padding: 4px
+$category-forum-text-color: $font-color
+$category-forum-background-color: $category-forums-background-color
+$category-forum-header-margin: 0px
+$category-forum-header-font-size: 12px
+$category-forum-header-color: $header-color
 
 $forum-padding: 8px
 $forum-margin: 8px
+$forum-text-color: $font-color
 $forum-background-color: #80a6d5 + #111
-$forum-text-color: #f0f0f0
-$forum-header-color: #fff
+$forum-header-margin: 0px
+$forum-header-color: $header-color
+
+$forum-nested-forums-margin: 8px
+$forum-nested-forums-padding: 8px
+
+$forum-topics-margin: 8px
+$forum-topics-padding: 8px
+
+$forum-topic-margin: 8px
+$forum-topic-padding: 8px
+$forum-topic-text-color: $font-color
+$forum-topic-background-color: $forum-background-color + #222
+$forum-topic-header-margin: 0px
+$forum-topic-header-color: $header-color
+
+$topic-margin: 8px
+$topic-padding: 8px
+$topic-text-color: $font-color
+$topic-background-color: $forumby-background-color
+$topic-header-margin: 0px
+$topic-header-color: $header-color
+
+$topic-posts-margin: 8px
+$topic-posts-padding: 8px
+
+$topic-post-margin: 8px
+$topic-post-padding: 8px
+$topic-post-text-color: $font-color
+$topic-post-background-color: $category-background-color
+$topic-post-header-margin: 0px
+$topic-post-header-color: $header-color
+
+$post-margin: 8px
+$post-padding: 8px
+$post-font-size: $blueprint-font-size
+$post-text-color: $font-color
+$post-background-color: $category-background-color
+$post-header-margin: 0px
+$post-header-color: $header-color
 
 #forumby
   +block
@@ -22,18 +82,57 @@ $forum-header-color: #fff
   margin: 16px
   padding: 16px
 
+  color: $forumby-text-color
+
+  background-color: $forumby-background-color
+
+  h1, h2, h3, h4, h5, h6
+    margin: $forumby-header-margin
+
+    color: $forumby-header-color
+
 .category
   +round-block
 
   margin: $category-margin
   padding: $category-padding
 
+  color: $category-text-color
+
   background-color: $category-background-color
 
-  .category-forums
-    +block
+  h1, h2, h3, h4, h5, h6
+    margin: $category-header-margin
 
+    color: $category-header-color
+
+  .forums
+    +round-block
+
+    margin: $category-forums-margin
     padding: $category-forums-padding
+
+    color: $category-forums-text-color
+
+    background-color: $category-forums-background-color
+
+  .forum
+    +inline-block
+
+    margin: $category-forum-margin
+    padding: $category-forum-padding
+
+    color: $category-forum-text-color
+
+    background-color: $category-forum-background-color
+
+    h1, h2, h3, h4, h5, h6
+      +inline-block
+
+      margin: $category-forum-header-margin
+
+      font-size: $category-forum-header-font-size
+      color: $category-forum-header-color
 
 .forum
   +round-block
@@ -45,7 +144,89 @@ $forum-header-color: #fff
 
   background-color: $forum-background-color
 
-  h2
-    margin: 0px
+  h1, h2, h3, h4, h5, h6
+    margin: $forum-header-margin
 
     color: $forum-header-color
+
+  .nested-forums
+    +block
+
+    margin: $forum-nested-forums-margin
+    padding: $forum-nested-forums-padding
+
+  .topics
+    +block
+
+    margin: $forum-topics-margin
+    padding: $forum-topics-padding
+
+  .topic
+    +round-block
+
+    margin: $forum-topic-margin
+    padding: $forum-topic-padding
+
+    color: $forum-topic-text-color
+
+    background-color: $forum-topic-background-color
+
+    h1, h2, h3, h4, h5, h6
+      margin: $forum-topic-header-margin
+
+      color: $forum-topic-header-color
+
+.topic
+  +round-block
+
+  margin: $topic-margin
+  padding: $topic-padding
+
+  color: $topic-text-color
+
+  background-color: $topic-background-color
+
+  h1, h2, h3, h4, h5, h6
+    margin: $topic-header-margin
+
+    color: $topic-header-color
+
+  .posts
+    +block
+
+    margin: $topic-posts-margin
+    padding: $topic-posts-padding
+
+  .post
+    +round-block
+
+    margin: $topic-post-margin
+    padding: $topic-post-padding
+
+    color: $topic-post-text-color
+
+    background-color: $topic-post-background-color
+
+    h1, h2, h3, h4, h5, h6
+      margin: $topic-post-header-margin
+
+      color: $topic-post-header-color
+
+.post
+  +round-block
+
+  margin: $post-margin
+  padding: $post-padding
+
+  font-size: $post-font-size
+  color: $post-text-color
+
+  background-color: $post-background-color
+
+  h1, h2, h3, h4, h5, h6
+    margin: $post-header-margin
+
+    color: $post-header-color
+
+  article
+    +block
