--- a/app/views/categories/_category.html.haml
+++ b/app/views/categories/_category.html.haml
@@ -1,4 +1,4 @@
 %section[category]
   %h2= link_to category.name, category_path(category)
   %p= category.description
-  .category-forums= forums_in category
+  .forums= forums_in category
