--- a/app/views/forums/_forum.html.haml
+++ b/app/views/forums/_forum.html.haml
@@ -2,4 +2,6 @@
   %h2= link_to forum.name, forum_path(forum)
   %p= forum.description
   - if forum.has_nested_forums?
-    .nested_forums= nested_forums_for forum
+    .nested-forums= nested_forums_for forum
+  - if forum.has_topics?
+    .topics= topics_for forum
