--- a/public/stylesheets/header.css
+++ b/public/stylesheets/header.css
@@ -18,71 +18,85 @@ Syntax error: Undefined mixin 'inline-block'.
 Backtrace:
 /home/matheus/projects/forumby/app/stylesheets/header.sass:17:in `inline-block'
 /home/matheus/projects/forumby/app/stylesheets/header.sass:17
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/haml-3.0.25/lib/sass/tree/mixin_node.rb:62:in `perform!'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/haml-3.0.25/lib/sass/tree/node.rb:305:in `_perform'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/haml-3.0.25/lib/sass/tree/node.rb:213:in `perform'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/haml-3.0.25/lib/sass/tree/node.rb:327:in `block in perform_children'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/haml-3.0.25/lib/sass/tree/node.rb:327:in `map'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/haml-3.0.25/lib/sass/tree/node.rb:327:in `perform_children'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/haml-3.0.25/lib/sass/tree/node.rb:317:in `perform!'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/haml-3.0.25/lib/sass/tree/rule_node.rb:191:in `perform!'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/haml-3.0.25/lib/sass/tree/node.rb:305:in `_perform'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/haml-3.0.25/lib/sass/tree/node.rb:213:in `perform'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/haml-3.0.25/lib/sass/tree/node.rb:327:in `block in perform_children'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/haml-3.0.25/lib/sass/tree/node.rb:327:in `map'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/haml-3.0.25/lib/sass/tree/node.rb:327:in `perform_children'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/haml-3.0.25/lib/sass/tree/node.rb:317:in `perform!'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/haml-3.0.25/lib/sass/tree/rule_node.rb:191:in `perform!'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/haml-3.0.25/lib/sass/tree/node.rb:305:in `_perform'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/haml-3.0.25/lib/sass/tree/node.rb:213:in `perform'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/haml-3.0.25/lib/sass/tree/node.rb:327:in `block in perform_children'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/haml-3.0.25/lib/sass/tree/node.rb:327:in `map'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/haml-3.0.25/lib/sass/tree/node.rb:327:in `perform_children'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/haml-3.0.25/lib/sass/tree/node.rb:317:in `perform!'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/haml-3.0.25/lib/sass/tree/root_node.rb:59:in `perform!'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/haml-3.0.25/lib/sass/tree/node.rb:305:in `_perform'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/haml-3.0.25/lib/sass/tree/node.rb:213:in `perform'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/haml-3.0.25/lib/sass/tree/root_node.rb:37:in `perform'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/haml-3.0.25/lib/sass/tree/root_node.rb:29:in `render'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/haml-3.0.25/lib/sass/plugin.rb:223:in `update_stylesheet'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/haml-3.0.25/lib/sass/plugin.rb:88:in `block (2 levels) in update_stylesheets'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/haml-3.0.25/lib/sass/plugin.rb:81:in `each'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/haml-3.0.25/lib/sass/plugin.rb:81:in `block in update_stylesheets'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/haml-3.0.25/lib/sass/plugin.rb:79:in `each'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/haml-3.0.25/lib/sass/plugin.rb:79:in `update_stylesheets'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/haml-3.0.25/lib/sass/plugin.rb:50:in `check_for_updates'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/haml-3.0.25/lib/sass/plugin/rack.rb:40:in `call'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/warden-1.0.3/lib/warden/manager.rb:35:in `block in call'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/warden-1.0.3/lib/warden/manager.rb:34:in `catch'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/warden-1.0.3/lib/warden/manager.rb:34:in `call'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/actionpack-3.0.6/lib/action_dispatch/middleware/best_standards_support.rb:17:in `call'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/actionpack-3.0.6/lib/action_dispatch/middleware/head.rb:14:in `call'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/sass-3.1.1/lib/sass/tree/visitors/perform.rb:169:in `visit_mixin'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/sass-3.1.1/lib/sass/tree/visitors/base.rb:37:in `visit'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/sass-3.1.1/lib/sass/tree/visitors/perform.rb:18:in `visit'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/sass-3.1.1/lib/sass/tree/visitors/base.rb:53:in `block in visit_children'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/sass-3.1.1/lib/sass/tree/visitors/base.rb:53:in `map'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/sass-3.1.1/lib/sass/tree/visitors/base.rb:53:in `visit_children'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/sass-3.1.1/lib/sass/tree/visitors/perform.rb:27:in `block in visit_children'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/sass-3.1.1/lib/sass/tree/visitors/perform.rb:39:in `with_environment'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/sass-3.1.1/lib/sass/tree/visitors/perform.rb:26:in `visit_children'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/sass-3.1.1/lib/sass/tree/visitors/base.rb:37:in `block in visit'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/sass-3.1.1/lib/sass/tree/visitors/perform.rb:230:in `visit_rule'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/sass-3.1.1/lib/sass/tree/visitors/base.rb:37:in `visit'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/sass-3.1.1/lib/sass/tree/visitors/perform.rb:18:in `visit'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/sass-3.1.1/lib/sass/tree/visitors/base.rb:53:in `block in visit_children'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/sass-3.1.1/lib/sass/tree/visitors/base.rb:53:in `map'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/sass-3.1.1/lib/sass/tree/visitors/base.rb:53:in `visit_children'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/sass-3.1.1/lib/sass/tree/visitors/perform.rb:27:in `block in visit_children'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/sass-3.1.1/lib/sass/tree/visitors/perform.rb:39:in `with_environment'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/sass-3.1.1/lib/sass/tree/visitors/perform.rb:26:in `visit_children'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/sass-3.1.1/lib/sass/tree/visitors/base.rb:37:in `block in visit'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/sass-3.1.1/lib/sass/tree/visitors/perform.rb:230:in `visit_rule'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/sass-3.1.1/lib/sass/tree/visitors/base.rb:37:in `visit'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/sass-3.1.1/lib/sass/tree/visitors/perform.rb:18:in `visit'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/sass-3.1.1/lib/sass/tree/visitors/base.rb:53:in `block in visit_children'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/sass-3.1.1/lib/sass/tree/visitors/base.rb:53:in `map'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/sass-3.1.1/lib/sass/tree/visitors/base.rb:53:in `visit_children'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/sass-3.1.1/lib/sass/tree/visitors/perform.rb:27:in `block in visit_children'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/sass-3.1.1/lib/sass/tree/visitors/perform.rb:39:in `with_environment'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/sass-3.1.1/lib/sass/tree/visitors/perform.rb:26:in `visit_children'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/sass-3.1.1/lib/sass/tree/visitors/base.rb:37:in `block in visit'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/sass-3.1.1/lib/sass/tree/visitors/perform.rb:47:in `visit_root'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/sass-3.1.1/lib/sass/tree/visitors/base.rb:37:in `visit'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/sass-3.1.1/lib/sass/tree/visitors/perform.rb:18:in `visit'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/sass-3.1.1/lib/sass/tree/visitors/perform.rb:7:in `visit'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/sass-3.1.1/lib/sass/tree/root_node.rb:20:in `render'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/sass-3.1.1/lib/sass/engine.rb:291:in `_render'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/sass-3.1.1/lib/sass/engine.rb:239:in `block in render'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/sass-3.1.1/lib/sass/util.rb:298:in `silence_sass_warnings'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/sass-3.1.1/lib/sass/engine.rb:239:in `render'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/sass-3.1.1/lib/sass/plugin/compiler.rb:319:in `update_stylesheet'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/sass-3.1.1/lib/sass/plugin/compiler.rb:181:in `block (2 levels) in update_stylesheets'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/sass-3.1.1/lib/sass/plugin/compiler.rb:175:in `each'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/sass-3.1.1/lib/sass/plugin/compiler.rb:175:in `block in update_stylesheets'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/sass-3.1.1/lib/sass/plugin/compiler.rb:173:in `each'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/sass-3.1.1/lib/sass/plugin/compiler.rb:173:in `update_stylesheets'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/sass-3.1.1/lib/sass/plugin.rb:81:in `update_stylesheets'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/sass-3.1.1/lib/sass/plugin.rb:54:in `check_for_updates'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/sass-3.1.1/lib/sass/plugin/rack.rb:51:in `call'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/warden-1.0.4/lib/warden/manager.rb:35:in `block in call'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/warden-1.0.4/lib/warden/manager.rb:34:in `catch'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/warden-1.0.4/lib/warden/manager.rb:34:in `call'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/actionpack-3.0.7/lib/action_dispatch/middleware/best_standards_support.rb:17:in `call'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/actionpack-3.0.7/lib/action_dispatch/middleware/head.rb:14:in `call'
 /usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/rack-1.2.2/lib/rack/methodoverride.rb:24:in `call'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/actionpack-3.0.6/lib/action_dispatch/middleware/params_parser.rb:21:in `call'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/actionpack-3.0.6/lib/action_dispatch/middleware/flash.rb:182:in `call'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/actionpack-3.0.6/lib/action_dispatch/middleware/session/abstract_store.rb:149:in `call'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/actionpack-3.0.6/lib/action_dispatch/middleware/cookies.rb:302:in `call'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/activerecord-3.0.6/lib/active_record/query_cache.rb:32:in `block in call'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/activerecord-3.0.6/lib/active_record/connection_adapters/abstract/query_cache.rb:28:in `cache'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/activerecord-3.0.6/lib/active_record/query_cache.rb:12:in `cache'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/activerecord-3.0.6/lib/active_record/query_cache.rb:31:in `call'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/activerecord-3.0.6/lib/active_record/connection_adapters/abstract/connection_pool.rb:354:in `call'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/actionpack-3.0.6/lib/action_dispatch/middleware/callbacks.rb:46:in `block in call'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/activesupport-3.0.6/lib/active_support/callbacks.rb:416:in `_run_call_callbacks'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/actionpack-3.0.6/lib/action_dispatch/middleware/callbacks.rb:44:in `call'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/actionpack-3.0.7/lib/action_dispatch/middleware/params_parser.rb:21:in `call'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/actionpack-3.0.7/lib/action_dispatch/middleware/flash.rb:182:in `call'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/actionpack-3.0.7/lib/action_dispatch/middleware/session/abstract_store.rb:149:in `call'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/actionpack-3.0.7/lib/action_dispatch/middleware/cookies.rb:302:in `call'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/activerecord-3.0.7/lib/active_record/query_cache.rb:32:in `block in call'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/activerecord-3.0.7/lib/active_record/connection_adapters/abstract/query_cache.rb:28:in `cache'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/activerecord-3.0.7/lib/active_record/query_cache.rb:12:in `cache'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/activerecord-3.0.7/lib/active_record/query_cache.rb:31:in `call'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/activerecord-3.0.7/lib/active_record/connection_adapters/abstract/connection_pool.rb:354:in `call'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/actionpack-3.0.7/lib/action_dispatch/middleware/callbacks.rb:46:in `block in call'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/activesupport-3.0.7/lib/active_support/callbacks.rb:416:in `_run_call_callbacks'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/actionpack-3.0.7/lib/action_dispatch/middleware/callbacks.rb:44:in `call'
 /usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/rack-1.2.2/lib/rack/sendfile.rb:107:in `call'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/actionpack-3.0.6/lib/action_dispatch/middleware/remote_ip.rb:48:in `call'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/actionpack-3.0.6/lib/action_dispatch/middleware/show_exceptions.rb:47:in `call'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/railties-3.0.6/lib/rails/rack/logger.rb:13:in `call'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/actionpack-3.0.7/lib/action_dispatch/middleware/remote_ip.rb:48:in `call'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/actionpack-3.0.7/lib/action_dispatch/middleware/show_exceptions.rb:47:in `call'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/railties-3.0.7/lib/rails/rack/logger.rb:13:in `call'
 /usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/rack-1.2.2/lib/rack/runtime.rb:17:in `call'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/activesupport-3.0.6/lib/active_support/cache/strategy/local_cache.rb:72:in `call'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/activesupport-3.0.7/lib/active_support/cache/strategy/local_cache.rb:72:in `call'
 /usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/rack-1.2.2/lib/rack/lock.rb:11:in `block in call'
 <internal:prelude>:10:in `synchronize'
 /usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/rack-1.2.2/lib/rack/lock.rb:11:in `call'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/actionpack-3.0.6/lib/action_dispatch/middleware/static.rb:30:in `call'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/railties-3.0.6/lib/rails/application.rb:168:in `call'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/railties-3.0.6/lib/rails/application.rb:77:in `method_missing'
-/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/railties-3.0.6/lib/rails/rack/log_tailer.rb:14:in `call'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/actionpack-3.0.7/lib/action_dispatch/middleware/static.rb:30:in `call'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/railties-3.0.7/lib/rails/application.rb:168:in `call'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/railties-3.0.7/lib/rails/application.rb:77:in `method_missing'
+/usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/railties-3.0.7/lib/rails/rack/log_tailer.rb:14:in `call'
 /usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/rack-1.2.2/lib/rack/content_length.rb:13:in `call'
 /usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/rack-1.2.2/lib/rack/handler/webrick.rb:52:in `service'
 /usr/local/rvm/rubies/ruby-1.9.2-p180/lib/ruby/1.9.1/webrick/httpserver.rb:111:in `service'
