--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -34,6 +34,6 @@
 
   %p= f.submit "Update"
 
-%p= link_to "Cancel my account", registration_path(resource_name), confirm: "Are you sure?", :method => :delete, class: 'dangerous-button'
+%p= link_to "Cancel my account", registration_path(resource_name), confirm: "Are you sure?", :method => :delete, :remote => true, :id => 'cancel-membership', class: 'dangerous-button'
 
 = link_to "Back", :back
