--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,6 +6,7 @@
     = stylesheet_link_tag 'print', :media => 'print'
     /[if lt IE 8]
       = stylesheet_link_tag 'ie', :media => 'screen, projection'
+    = stylesheet_link_tag :jquery_ui
     = javascript_include_tag :jquery
     = javascript_include_tag :defaults
     = csrf_meta_tag
