--- a/app/stylesheets/partials/_buttons.sass
+++ b/app/stylesheets/partials/_buttons.sass
@@ -1,15 +1,4 @@
-@import round-block
-
-$dangerous-button-border-radius: 32px
-$dangerous-button-padding: 8px
-$dangerous-button-red: #9f0e0e
-$dangerous-button-white: #fff
-
-@mixin forumby-links($normal, $hover, $active)
-  a
-    +hover-link
-    +link-colors($normal, $hover, $active, $normal, $normal)
-
+@mixin button
   a.dangerous-button
     +link-colors($dangerous-button-red, $dangerous-button-white)
     +border-radius($dangerous-button-border-radius)
