New tests added and old ones improved. Containers for nested models are not rendered unless the resource actually has children to display. Broken Rails database migrations due to factory_girl fixed. Testing tools are back on development environment.

--- a/app/views/categories/_category.html.haml
+++ b/app/views/categories/_category.html.haml
@@ -1,4 +1,6 @@
 %section[category]
   %h2= link_to category.name, category_path(category)
-  %p= category.description
-  .forums= forums_in category
+  - if category.has_description?
+    %p= category.description
+  - if category.has_forums?
+    .forums= forums_in category
