--- a/app/views/forumby/home.html.haml
+++ b/app/views/forumby/home.html.haml
@@ -1,4 +1,4 @@
 %section#forumby-home
   %h1= t 'forumby.home.heading'
   = list_for :categories, categories, :category
-  = list_for :forums, top_level_forums
+  = list_for :forums, top_level_forums, 'top_level_forum'
